# data-snack

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  data_snack.connections.html  data_snack.entities.html  data_snack.html  data_snack.key_factories.html  data_snack.serializers.html  data_snack.wrap.html  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: pages.yml
_sources/: data_snack.key_factories.rst.txt  data_snack.rst.txt  examples.rst.txt  index.rst.txt
docs/source/: conf.py  data_snack.connections.rst  data_snack.entities.rst  data_snack.rst  data_snack.serializers.rst  data_snack.wrap.rst  index.rst  modules.rst
examples/: examples.md
src/data_snack/: __init__.py  connection.py  exceptions.py  key_factory.py  snack.py  utils.py
src/data_snack/connections/: __init__.py  base.py  memcached.py  mongo.py  redis.py
src/data_snack/entities/: __init__.py  base.py  compound.py  decorators.py  entity.py  entity_meta.py  exceptions.py  models.py  registry.py  schema.py  utils.py  validation.py
src/data_snack/key_factories/: __init__.py  base.py  cluster.py  hash.py  non_cluster.py  single.py
src/data_snack/serializers/: __init__.py  base.py  dataclass.py  json.py
src/data_snack/utils/: __init__.py  data_frame.py
src/data_snack/wrap/: __init__.py  base.py  data_frame.py  entity.py  exceptions.py
tests/: test_utils.py
tests/data_snack/: conftest.py  test_key_factory.py  test_snack.py
(+20 files in other folders)
