[metadata]
name = data-snack
version = 0.0.4
author = webinterpret-datascience
author_email = data-science@webinterpret.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/webinterpret-ds/data-snack
project_urls =
    Bug Tracker = https://github.com/webinterpret-ds/data-snack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src

[build_ext]
debug = 1

